# study_cmake

./: README.md
CMakeProject1/: CMakeLists.txt
CMakeProject1/CMakeProject/: CMakeLists.txt  CMakeProject.cpp
CMakeProject1/CMakeProject/CMakeRoot/: CMakeLists.txt  CMakeRoot.cpp  CMakeRoot.h
dynamic-explicit-linking/: CMakeLists.txt
dynamic-explicit-linking/MainProject/: CMakeLists.txt
dynamic-explicit-linking/MainProject/lib/: CMakeLists.txt
dynamic-explicit-linking/MainProject/lib/BaseProject/: CMakeLists.txt
dynamic-explicit-linking/MainProject/lib/BaseProject/include/: IBaseProject.h
dynamic-explicit-linking/MainProject/lib/BaseProject/src/: BaseProject.cpp  BaseProject.h
dynamic-explicit-linking/MainProject/src/: MainProject.cpp
dynamic-implicit-linking/: CMakePresets.json
dynamic-implicit-linking/MainProject/: CMakeLists.txt
dynamic-implicit-linking/MainProject/lib/: CMakeLists.txt
dynamic-implicit-linking/MainProject/lib/BaseProject/include/: BaseProject.h
dynamic-implicit-linking/MainProject/lib/BaseProject/src/: BaseProject.cpp
dynamic-implicit-linking/MainProject/lib/SubProject/: CMakeLists.txt
dynamic-implicit-linking/MainProject/lib/SubProject/src/: SubProject.cpp
dynamic-implicit-linking/MainProject/src/: MainProject.cpp
hchat/: .gitignore  CMakeLists.txt
hchat/hchat/: CMakeLists.txt
hchat/hchat-cli/: CMakeLists.txt  main.cpp
hchat/hchat-test/: CMakeLists.txt  test.cpp
hchat/hchat/include/: hchat.h
hchat/hchat/src/: hchat.cpp
static-linking/: CMakeLists.txt  CMakePresets.json
static-linking/MainProject/: CMakeLists.txt
static-linking/MainProject/lib/BaseProject/: CMakeLists.txt
static-linking/MainProject/lib/BaseProject/include/: BaseProject.h
static-linking/MainProject/lib/SubProject/src/: SubProject.cpp
static-linking/MainProject/src/: MainProject.cpp
삼각-의존-테스트/: CMakeLists.txt  CMakePresets.json
삼각-의존-테스트/MainProject/: CMakeLists.txt
삼각-의존-테스트/MainProject/lib/BaseProject/src/: BaseProject.cpp
삼각-의존-테스트/MainProject/lib/SubProject/: CMakeLists.txt
삼각-의존-테스트/MainProject/lib/SubProject/include/: SubProject.h
삼각-의존-테스트/MainProject/lib/SubProject/src/: SubProject.cpp
삼각-의존-테스트/MainProject/src/: MainProject.cpp
